# online_proctoring

./: .gitignore
backend/: .gitignore  README.adoc  pyproject.toml
backend/docs/: data_model.adoc  data_model.drawio
backend/src/app/: __init__.py  data_model.py  database.py  default_config.py  error_handling.py  main.py  password_hashing.py
backend/src/app/blueprints/: __init__.py  user.py
backend/src/app/blueprints/test_setter/: __init__.py
backend/src/app/blueprints/user/: __init__.py  authentication.py  current.py
backend/src/app/config/: profile.py
backend/src/app/config/database/: __init__.py  postgresql.py  sqlite.py
backend/tests/: conftest.py
backend/tests/app/blueprints/: conftest.py  test_user.py
backend/tests/app/blueprints/user/: test_authentication.py  test_current.py  test_user.py
frontend/: README.adoc  angular.json  package-lock.json  package.json
frontend/src/: index.html
frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/backend-api-base-url/: .gitignore  backend-api-base-url-value.d.ts  backend-api-base-url.service.spec.ts  backend-api-base-url.service.ts
frontend/src/app/create-account/: create-account.component.html  create-account.component.ts
frontend/src/app/error-reporting/: error-reporting.service.spec.ts  error-reporting.service.ts
frontend/src/app/home/: home.component.html  home.component.ts
frontend/src/app/invigilator-dashboard/: invigilator-dashboard.component.spec.ts  invigilator-dashboard.component.ts
frontend/src/app/login/: login.component.html  login.component.ts
frontend/src/app/role-assumption/: role-assumption.component.css  role-assumption.component.html  role-assumption.component.spec.ts  role-assumption.component.ts
frontend/src/app/test/: test-details.data.ts  test.component.css  test.component.html  test.component.ts  test.service.ts
frontend/src/app/test-card/: test-card.component.html  test-card.component.ts
frontend/src/app/test-setter-dashboard/: test-setter-dashboard.component.html  test-setter-dashboard.component.spec.ts  test-setter-dashboard.component.ts
frontend/src/app/test-taker-dashboard/: test-taker-dashboard.component.html  test-taker-dashboard.component.spec.ts  test-taker-dashboard.component.ts
frontend/src/app/user/: user-details.data.ts  user.service.ts
