[project]
name = "online_proctoring"
version = "0.0.0"
authors = [
    {name="Aditya Pune", email="aditya.pune@nmims.in"},
    {name="Krish Vira", email="krish.vira@nmims.in"},
    {name="Yash Pawar", email="yash.pawar3@nmims.in"}
]
description = "An online exam platform app with automated proctoring using gaze tracking."
readme = {file = "README.adoc", content-type = "text/plain"}
requires-python = ">= 3.13.1"
dependencies = [
    "fastapi[standard] ~= 0.115",
    "sqlmodel ~= 0.0",
    "sqlalchemy[asyncio] ~= 2.0",
    "aiomysql ~= 0.2",
    # "alembic"
]

[dependency-groups]
test = [
    "pytest ~= 8.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]