[project]
name = "online_proctoring"
version = "0.1.0.dev1"
authors = [
    {name="Aditya Pune", email="aditya.pune@nmims.in"},
    {name="Krish Vira", email="krish.vira@nmims.in"},
    {name="Yash Pawar", email="yash.pawar3@nmims.in"}
]
description = "An online exam platform app with automated proctoring using gaze tracking."
readme = {file = "README.adoc", content-type = "text/plain"}
requires-python = ">= 3.13.1"
dependencies = [
    "quart ~= 0.20.0",
    "quart-schema[pydantic] ~= 0.21.0",
    "quart-bcrypt ~= 0.0.9",
    "quart-auth ~= 0.11.0",
    "sqlalchemy[asyncio] ~= 2.0",
    # "alembic",
]

[dependency-groups]
dev = [
    "aiosqlite ~= 0.21.0",
    "python-dotenv ~= 1.0.1"
]
test = [
    {include-group = "dev"},
    "pytest ~= 8.3",
    # "pytest-asyncio",
]
prod = [
    "aiomysql ~= 0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]