[project]
name = "online_proctoring"
version = "0.1.0.dev1"
authors = [
    {name="Aditya Pune", email="aditya.pune@nmims.in"},
    {name="Krish Vira", email="krish.vira@nmims.in"},
    {name="Yash Pawar", email="yash.pawar3@nmims.in"}
]
description = "An online exam platform app with automated proctoring using gaze tracking."
readme = {file = "README.adoc", content-type = "text/plain"}
requires-python = "~= 3.13.1"
dependencies = [
    "quart ~= 0.20.0",
    "quart-schema[pydantic] ~= 0.21.0",
    "quart-bcrypt == 0.0.9",
    "quart-auth ~= 0.11.0",
    "sqlalchemy[asyncio] ~= 2.0.38",
]

[dependency-groups]
postgresql = [
    "asyncpg ~= 0.30.0",
]
dev = [
    {include-group = "postgresql"},
    "python-dotenv ~= 1.0.1",
]
test = [
    {include-group = "postgresql"},
    "pytest ~= 8.3.5",
    "pytest-asyncio ~= 0.25.3",
]
test_dev = [
    {include-group = "test"},
    "pytest-dotenv ~= 0.5.2",
]
prod = [
    {include-group = "postgresql"},
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"